html/src/app.scss
/* ... */
i.x-user-status {
    display: inline-block;
    width: 10px;
    height: 10px;
    background: #808080;
    border-radius: 50%;
}

i.x-user-status.active {
    background: #f4e05e;
}

i.x-user-status.online {
    background: #67c23a;
}

i.x-user-status.joinme {
    background: #409eff;
    mask-image: url(masks/joinme.svg);
}

i.x-user-status.askme {
    background: #ff9500;
    mask-image: url(masks/askme.svg);
}

i.x-user-status.busy {
    background: #ff2c2c;
    mask-image: url(masks/busy.svg);
}

.x-tag-friend {
    color: rgb(255, 208, 0) !important;
    border-color: rgb(255, 208, 0) !important;
}

.x-tag-vrcplus {
    color: rgb(255, 208, 0) !important;
    border-color: rgb(255, 208, 0) !important;
}

.x-tag-platform-pc {
    color: #409eff !important;
    border-color: #409eff !important;
}

.x-tag-platform-quest {
    color: #67c23a !important;
    border-color: #67c23a !important;
}

.x-tag-platform-ios {
    color: #c7c7ce !important;
    border-color: #c7c7ce !important;
}

.x-tag-platform-other {
    color: #ff4177 !important;
    border-color: #ff4177 !important;
}

.x-tag-age-verification {
    color: #ff4177 !important;
    border-color: #ff4177 !important;
}

.x-grey {
    color: #909399;
}

.el-tree-node {
    white-space: normal;
}

.el-tree-node__content {
    height: auto;
}

.el-progress-bar {
    padding-right: 80px;
    margin-right: -85px;
}

.el-progress__text {
    color: #c8c8c8;
}

.x-user-dialog .el-textarea__inner {
    padding: 0;
    background: none;
    border: 0;
    border-radius: 2px;
}

.options-container {
    margin-top: 30px;
    padding: 0px 10px 10px 10px;
}

.options-container .header {
    font-weight: bold;
    font-size: 20px;
}

.options-container .sub-header {
    font-weight: bold;
    font-size: 15px;
}

.options-container-item {
    font-size: 12px;
    margin-top: 5px;
}

.options-container-item .name {
    display: inline-block;
    min-width: 175px;
}

.toggle-switch {
    display: inline-block;
}

.toggle-list {
    font-size: 15px;
}

.toggle-list .toggle-item {
    margin-bottom: 5px;
}

.toggle-list .toggle-name {
    display: inline-block;
    min-width: 190px;
    padding-right: 5px;
    text-align: right;
}

.color-picker {
    font-size: 18px;
    vertical-align: top;
}

.el-color-picker__trigger {
    border: unset;
}

.el-color-picker__color {
    border: 0.5px solid #999;
}

.el-button--success {
    background-color: #67c23a !important;
    border-color: #67c23a !important;
}

.el-button--danger {
    background-color: #f56c6c !important;
    border-color: #f56c6c !important;
}

.el-button--warning {
    background-color: #e6a23c !important;
    border-color: #e6a23c !important;
}

.avatar-info {
    cursor: pointer;
    width: fit-content;
    vertical-align: top;
}

.avatar-info-own {
    display: inline-block;
    color: #e6a23c;
}

.avatar-info-public {
    display: inline-block;
    color: #67c23a;
}

.avatar-info-unknown {
    display: inline-block;
    color: #f56c6c;
}

.el-form-item {
    margin-bottom: 4px;
}

.photon-event-table .el-table--mini .el-table__cell,
.current-instance-table .el-table--mini .el-table__cell {
    padding: 0;
}

.photon-event-table {
    margin-top: 20px;
}

.current-instance-table img.friends-list-avatar {
    width: unset;
    height: 16px;
    margin-right: 0;
    margin-left: 3px;
    border-radius: 2px;
}

.el-pagination .el-select .el-input .el-input__inner,
.el-input--mini .el-input__icon {
    height: 22px;
}

.el-pagination .btn-next {
    margin-right: 10px;
}

.el-dialog,
.el-message-box {
    border-radius: 28px;
}

.el-tabs__nav-wrap::after {
    background-color: #e4e7ed14;
}

.dialog-title {
    font-weight: bold;
}

.group-banner-image {
    display: none;
}

.changelog-dialog img {
    width: 100%;
}

.vrc-instance-queue-message {
    padding: 3px;
    top: 0 !important;
}

.vrc-instance-queue-message .el-message__content {
    margin-right: 20px;
}

.el-tab-pane {
    height: 100%;
}

.el-tabs {
    display: flex;
    flex-direction: column;
}

.el-tabs__content {
    flex: 1;
    max-height: 100%;
    overflow-y: auto;
}

.x-aside-container .el-tabs,
.x-aside-container .el-tabs__nav-wrap,
.x-aside-container .el-tabs__item {
    padding: 0 !important;
    font-size: 13px;
}

.el-tabs__header {
    padding: 0 1px;
}

.zero-margin-tabs .el-tabs__header {
    margin-bottom: 0;
}

.x-friend-item .el-checkbox__inner,
.el-table__row .el-checkbox__inner {
    width: 28px;
    height: 28px;
    border-radius: 4px;
}

.x-friend-item .el-checkbox__inner::after,
.el-table__row .el-checkbox__inner::after {
    width: 8px;
    height: 14px;
    left: 8px;
    top: 2px;
}

.max-height-el-select .el-select-dropdown__wrap {
    max-height: 83vh;
}

